# temporaless

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  .npmrc  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  Dockerfile  Makefile  PRD.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  buf.gen.yaml  decision.md  go.mod  go.sum  package-lock.json  package.json
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml
adapters/go/backfill/: backfill.go  backfill_test.go
adapters/go/background/: background.go  background_test.go
adapters/go/connectstore/: README.md  client.go  client_validation_test.go  error_test.go  handler.go  handler_test.go  integration_test.go  workflow_singleflight_test.go
adapters/go/connectworkflow/: README.md  connectworkflow.go  connectworkflow_test.go
adapters/go/cronscheduler/: README.md  derive.go  derive_test.go  scheduler.go  scheduler_test.go
adapters/go/dependencies/: dependencies.go  dependencies_test.go
adapters/go/dispatch/: README.md  dispatch.go  dispatch_test.go
adapters/go/gocdkclaims/: README.md  store.go  store_test.go
adapters/go/inspector/: README.md  inspector.go  inspector_test.go
adapters/go/janitor/: README.md  janitor.go  janitor_test.go
adapters/go/outbox/: README.md  outbox.go  outbox_test.go
adapters/go/scanquery/: README.md  store.go  store_test.go
adapters/go/temporalcompat/: README.md  adapter.go  adapter_test.go
adapters/go/timerscanner/: README.md  scanner.go  scanner_test.go
adapters/go/visualization/: README.md  visualization.go  visualization_test.go
adapters/py/connectworkflow/: README.md  pyproject.toml
adapters/py/connectworkflow/src/temporaless_connectworkflow/: __init__.py  adapter.py  py.typed
adapters/py/connectworkflow/tests/: test_adapter.py
adapters/py/indexstore/: README.md  pyproject.toml
adapters/py/indexstore/src/temporaless_indexstore/: __init__.py  adapter.py
adapters/py/indexstore/tests/: test_indexstore.py
adapters/py/prefectcompat/: README.md  pyproject.toml
adapters/py/prefectcompat/src/temporaless_prefectcompat/: __init__.py  adapter.py
adapters/py/prefectcompat/tests/: deployment_flow.py  test_adapter.py  test_common_workflows.py  test_integration.py  test_portability.py
adapters/py/temporalcompat/: README.md  pyproject.toml
adapters/py/temporalcompat/src/temporaless_temporalcompat/: __init__.py  adapter.py
adapters/py/temporalcompat/tests/: test_adapter.py  test_portability.py
api/temporaless/v1/: temporaless.proto
cmd/temporaless/: main.go  main_test.go
core/go/storage/: benchmark_test.go  due_timer_test.go  events.go  events_test.go  key.go  key_test.go  latest_pointer_test.go  list_test.go  opendal.go  opendal_test.go  point_validation_test.go  store.go  validate.go
core/go/workflow/: activity_claim_test.go  activity_helper.go  activity_helper_test.go  activity_retry_claim_race_test.go  benchmark_test.go  cache.go  cache_test.go  claim_capability.go  claim_capability_test.go  concurrency.go  concurrency_test.go  connect.go  connect_test.go  durable_retry_test.go  execution_claim_test.go  fanout.go  fanout_test.go  poll_test.go  record_invariant_test.go  retry_after_test.go  retry_timer_repair_test.go  sleep_liveness_test.go  workflow.go  workflow_test.go  wrap.go  wrap_claim_test.go
core/py/: README.md  pyproject.toml
core/py/benchmarks/: __main__.py  _harness.py  bench_storage.py  bench_workflow.py
core/py/src/buf/validate/: validate_pb2.py
core/py/src/temporaless/: __init__.py  _cache.py  backfill.py  background.py  connectstore.py  cronscheduler.py  dependencies.py  dispatch.py  inspector.py  janitor.py  migrate_v1_to_v2.py  outbox.py  scheduler_runner.py  storage.py  timerscanner.py  visualization.py  workflow.py
core/py/src/temporaless/v1/: __init__.py  temporaless_connect.py  temporaless_pb2.py  temporaless_pb2.pyi
core/py/tests/: test_activity_claims.py  test_activity_helper.py  test_backfill.py  test_background.py  test_cache.py  test_claim_capability.py  test_concurrency.py  test_concurrency_keys.py  test_connectstore.py  test_cronscheduler.py  test_dependencies.py  test_dispatch.py  test_durable_retry.py  test_fanout.py  test_inspector.py  test_integration.py  test_janitor.py  test_migrate_v1_to_v2.py  test_outbox.py  test_production_server.py  test_retry_after.py  test_scheduler_runner.py  test_storage_v2.py  test_stress.py  test_timerscanner.py  test_visualization.py  test_workflow.py  test_workflow_singleflight.py
core/rs/temporaless/: Cargo.toml  build.rs
core/rs/temporaless/benches/: storage.rs
core/rs/temporaless/src/: dispatch.rs  lib.rs  storage.rs  workflow.rs
core/rs/temporaless/tests/: dispatch.rs  interop.rs  storage.rs  workflow.rs
core/ts/: README.md  tsconfig.json
core/ts/scripts/: copy-assets.mjs
core/ts/src/: connectstore.ts  index.ts  invariant.ts  visualization.ts
core/ts/test/: connectstore.test.ts  invariant.test.ts  visualization.test.ts
deploy/: temporaless.nomad.hcl  vars.hcl.example
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml
docs/: adapter-contract.md  adapter-portability.md  analytics.md  architecture.md  benchmarks.md  canonical-workflows.md  claims.md  comparisons.md  dependencies.md  deployment.md  getting-started.md  hard-cases.md  orchestrator-adapters.md  philosophy.md  production-checklist.md  runbook.md  scheduling.md  sdks.md  storage-rpc.md  temporal-adapter.md  visual-workflows.md
examples/go/fetch-prices/: main.go
examples/go/llm-completion/: main.go
examples/go/production-server/: main.go  main_test.go  setpgid_unix.go
examples/go/quant-service/: main.go
examples/go/stocks-pipeline/: main.go
examples/go/twitter-webhook/: main.go
examples/py/: approval_workflow.py  data_pipeline.py  fetch_prices.py  llm_completion.py  production_server.py  quant_service.py  quant_signals.py  stocks_cron.py
scripts/: bench-go  bench-py  bench-rs  check  check_buf_breaking.py  check_versions.py  generate  public-surface-check  set_version.py
