[project]
name = "temporaless"
version = "0.3.0"
description = "Storage-first serverless workflow replay for protobuf activities."
readme = "../../README.md"
requires-python = ">=3.13"
dependencies = [
    "connectrpc>=0.10.0",
    "croniter>=2.0.0",
    "opendal>=0.47.1",
    "protobuf>=7.35.1",
    "protovalidate>=1.2.0",
]

[project.scripts]
temporaless-migrate-v1-to-v2 = "temporaless.migrate_v1_to_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buf", "src/temporaless"]

[tool.uv]
package = true

[tool.uv.sources]
temporaless-indexstore = { path = "../../adapters/py/indexstore", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/buf", "src/temporaless/v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[tool.ty.environment]
# `python-version` only — paths/excludes live in `scripts/check` since the
# script invokes `ty check` with explicit paths (including `../../examples/py`,
# which lives outside this project root and can't be expressed via
# `[tool.ty.src].include`).
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "stress: long-running concurrency stress tests; included in the default suite, skip via `-m 'not stress'`",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "temporaless-indexstore",
    "ty>=0.0.34",
    "types-protobuf>=7.34.1.20260503",
    "uvicorn>=0.34.0",
]
