[project]
name = "temporaless"
version = "0.8.2"
description = "Storage-first serverless workflow replay for protobuf activities."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "connectrpc>=0.11.1",
    "croniter>=6.2.4",
    "opendal>=0.47.3",
    "protobuf>=7.35.1",
    "protovalidate>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/jim-technologies/temporaless"
Repository = "https://github.com/jim-technologies/temporaless"
Issues = "https://github.com/jim-technologies/temporaless/issues"

[project.optional-dependencies]
# The core exports an ASGI application but does not require one server. The
# bundled production image opts into this locked Uvicorn extra explicitly.
server = ["uvicorn>=0.51.0"]

[project.scripts]
temporaless-migrate-v1-to-v2 = "temporaless.migrate_v1_to_v2:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buf", "src/temporaless"]

[tool.uv]
package = true

[tool.uv.sources]
temporaless-connectworkflow = { path = "../../adapters/py/connectworkflow", editable = true }
temporaless-indexstore = { path = "../../adapters/py/indexstore", editable = true }

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["src/buf", "src/temporaless/v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[tool.ty.environment]
# `python-version` only — paths/excludes live in `scripts/check` since the
# script invokes `ty check` with explicit paths (including `../../examples/py`,
# which lives outside this project root and can't be expressed via
# `[tool.ty.src].include`).
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "stress: long-running concurrency stress tests; included in the default suite, skip via `-m 'not stress'`",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "protoc-gen-connectrpc @ git+https://github.com/connectrpc/connect-py.git@ea19bf7530468e8aa1cdcca8bea0795a034d0f41#subdirectory=protoc-gen-connectrpc",
    "ruff>=0.15.21",
    "temporaless-connectworkflow==0.8.2",
    "temporaless-indexstore==0.8.2",
    "ty>=0.0.59",
    "types-protobuf>=7.34.1.20260518",
    "uvicorn>=0.51.0",
]
