[project]
name = "temporaless-prefectcompat"
version = "0.1.0"
description = "Strict Prefect compatibility adapter for Temporaless unary protobuf handlers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "temporaless",
    "prefect>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporaless_prefectcompat"]

[tool.uv]
package = true

[tool.uv.sources]
temporaless = { path = "../../../core/py", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "types-protobuf>=7.34.1.20260503",
]
