[project]
name = "temporaless-prefectcompat"
version = "0.7.0"
description = "Strict Prefect compatibility adapter for Temporaless unary protobuf handlers."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "temporaless==0.7.0",
    "prefect>=3.7.8",
]

[project.urls]
Homepage = "https://github.com/jim-technologies/temporaless"
Repository = "https://github.com/jim-technologies/temporaless"
Issues = "https://github.com/jim-technologies/temporaless/issues"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporaless_prefectcompat"]

[tool.uv]
package = true

[tool.uv.sources]
temporaless = { path = "../../../core/py", editable = true }
temporaless-connectworkflow = { path = "../connectworkflow", editable = true }

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "temporaless-connectworkflow==0.7.0",
    "ty>=0.0.59",
    "types-protobuf>=7.34.1.20260518",
]
