[package]
name = "temporaless"
version.workspace = true
edition = "2024"
rust-version = "1.97"
description = "Experimental Temporaless Rust storage and minimal workflow runtime."
license = "Apache-2.0"
repository = "https://github.com/jim-technologies/temporaless"
publish = false
# benches/storage.rs is wired explicitly as a [[bin]] so we get `cargo run`
# semantics (no nightly bencher, no criterion overhead) and the output
# format matches Go/Python. Disable the cargo-auto-detected [[bench]] form
# for the same file.
autobenches = false

[lib]
path = "src/lib.rs"

[dependencies]
# OpenDAL is native Rust — the Go/Python bindings wrap this. Async API for
# parity with the Python SDK's AsyncOperator.
opendal = { version = "0.58", default-features = false, features = ["services-fs"] }

# Protobuf runtime. `prost` is the Rust-native protobuf library; `prost-types`
# carries the well-known types (Duration, Timestamp, Any).
prost = "0.14"
prost-types = "0.14"

# Async runtime. The framework's I/O is async-first.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }

# Time / chrono for timestamps.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Errors.
thiserror = "2"

# Async trait support for the Queue trait (until trait fns become stable
# for trait objects). Tiny crate, no transitive deps.
async-trait = "0.1"

[build-dependencies]
# build.rs uses prost-build with the pure-Rust protox parser so no system
# protoc is required. Editions support is needed because the canonical proto
# is edition 2023.
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }

[[bin]]
name = "bench-storage"
path = "benches/storage.rs"
